--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -4,6 +4,9 @@
   --white-color: #ffffff;
 
   --main-background-color: #353638;
+
+  --hover-gray: #5f5f5f;
+  --box-shadow-color: rgba(0, 0, 0, 0.2);
 }
 
 @font-face {
