--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -14,7 +14,7 @@
   font-weight: 400;
   font-style: normal;
   font-display: swap;
-  src: url('public/fonts/gotham-pro.woff2') format('woff2');
+  src: url('../fonts/gotham-pro.woff2') format('woff2');
 }
 
 .page {
